docs/tests/parser/edge_cases/invalid/SwitchCaseFloat.b
fn void test() {
    switch (x) {
        case 3.14 {
        }
    }
}
